--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{RcppHoney Introduction}
-  %\VignetteEngine{kintr::rmarkdown}
+  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
