Took out compiled code from vignettes because something was complaining about c++ comments

--- a/vignettes/functions.Rmd
+++ b/vignettes/functions.Rmd
@@ -296,9 +296,10 @@ Let us put this all together now.
 
 ## Example
 
-```{r, engine='Rcpp'}
+```c++
 // Let Rcpp know we need RcppHoney
 // [[Rcpp::depends(RcppHoney)]]
+// [[Rcpp::plugins(RcppHoney)]]
 
 #include <RcppHoney.hpp>
 
